# libvita2d_sys_paf

./: .gitignore  CMakeLists.txt  README.md  libvita2d_sys.sln
libvita2d_sys/: libvita2d_sys.vcxproj  libvita2d_sys.vcxproj.filters
libvita2d_sys/include/: texture_atlas.h  utils.h  vita2d_sys.h  vita2d_sys_paf.h
libvita2d_sys/include/shader/compiled/: clear_f_gxp.h  clear_v_gxp.h  color_f_gxp.h  color_v_gxp.h  texture_f_gxp.h  texture_tint_f_gxp.h  texture_v_gxp.h
libvita2d_sys/source/: bin_packing_2d.c  bin_packing_2d.cpp  int_htab.c  texture_atlas.cpp  utils.cpp  vita2d.cpp  vita2d_draw.cpp  vita2d_pvf.cpp  vita2d_texture.cpp
